# node_project

./: DESIGN_PLAN.md  GRAPH_ARCHITECTURE.md  README.md  WIDGET_GUIDE.md  console.html  index.html  package-lock.json  package.json
.claude/: settings.local.json
src/: console.html  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/css/: base.css  console.css  node-graph.css  node.css  noodles.css  preview.css  socket.css  split-pane.css  toolbar.css
src/css/widgets/: boolean.css  color.css  debug.css  decimals.css  div.css  dropdown.css  float.css  head.css  icon.css  image.css  index.css  input_node.css  integer.css  load-file.css  meta.css  row.css  string.css  tooltip.css
src/js/: Console.js  Preview.js
src/js/graph/: Graph.js  Node.js  Socket.js  graph-topology.js  index.js  socket-types.js
src/js/graph/nodes/: BodyNode.js  BoolNode.js  ColorNode.js  Debug.js  DivNode.js  DocumentNode.js  ErrorNode.js  FloatNode.js  GenericNode.js  HeadNode.js  IconNode.js  ImageNode.js  InputNode.js  IntegerNode.js  LoadFile.js  MetaNode.js  StringNode.js  TestNode.js  index.js
src/js/graph/noodles/: Noodle.js  index.js
src/js/graph/widgets/: BodyWidget.js  BooleanWidget.js  ColorWidget.js  DebugWidget.js  DecimalsWidget.js  DivWidget.js  DropdownWidget.js  FloatWidget.js  HeadWidget.js  IconWidget.js  ImageWidget.js  InputWidget.js  IntegerWidget.js  LoadFileWidget.js  MetaWidget.js  StringWidget.js  index.js
